--- a/61index.html
+++ b/61index.html
@@ -13,8 +13,8 @@
 
 <nav>
   <a href="61index.html">من أنا</a>
-  <a href="62index.html">مدينتي</a>
-  <a href="63index.html">معلم بارز</a>
+  <a href="task62.html">مدينتي</a>
+  <a href="task63.html">معلم بارز</a>
 </nav>
 
 <div class="container">
